# meshtastic-ble-bridge

./: README.md  ble_tcp_bridge.py  pyproject.toml
bridge/: ble_handler.py  constants.py  framing.py  tcp_server.py
